welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                  ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                         ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                                  ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                                           ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                                                    ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                                                             ^FlowerCase:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def jardiniere():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}
                                                                                      ^